--- a/package.json
+++ b/package.json
@@ -19,16 +19,14 @@
   "author": "riz1",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/body-parser": "^1.19.2",
     "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/morgan": "^1.9.4",
     "@types/node": "^18.13.0",
-    "@types/passport": "^1.0.12",
-    "@types/passport-jwt": "^3.0.8",
-    "@types/passport-local": "^1.0.35",
-    "@types/passport-local-mongoose": "^6.1.1",
     "@typescript-eslint/eslint-plugin": "^5.54.0",
     "@typescript-eslint/parser": "^5.54.0",
     "eslint": "^8.0.1",
@@ -40,22 +38,22 @@
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "nodemon": "^2.0.20",
     "prettier": "^2.8.4",
+    "prisma": "^4.10.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   },
   "dependencies": {
+    "@prisma/client": "^4.10.1",
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "helmet": "^6.0.1",
     "husky": "^8.0.3",
-    "mongoose": "^6.9.2",
+    "jsonwebtoken": "^9.0.0",
     "morgan": "^1.10.0",
-    "passport": "^0.6.0",
-    "passport-jwt": "^4.0.1",
-    "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^7.1.2",
     "rate-limiter-flexible": "^2.4.1",
     "winston": "^3.8.2",
     "winston-mongodb": "^5.1.1",
